@@ -1,5 +1,10 @@
 2008-06-08  Jeffrey Stedfast  <fejj@novell.com>
 
+	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): added
+	constants for MD2, TIGER and HAVAL.
+
+2008-06-08  Jeffrey Stedfast  <fejj@novell.com>
+
 	* README: Bumped version
 
 	* configure.in: Bumped version to 2.3.3
